--- a/Style.css
+++ b/Style.css
@@ -24,12 +24,24 @@ nav a:hover {
         color: #ffffff;
         /* color: #acacac; */
         text-shadow: 0px 0px 15px #acacac;
-
-
 }
 
 nav a:active {
         color: #d6d6d6;
+}
+
+a {
+    color: #ebebeb;
+}
+
+a:hover {
+    color: #ffffff;
+    /* color: #acacac; */
+    text-shadow: 0px 0px 15px #acacac;
+}
+
+a:active {
+    color: #d6d6d6;
 }
 
 .active {
@@ -70,6 +82,7 @@ nav a:active {
         text-shadow: 2px 2px #3c3c3c;
 
         background-color: #00000057;
+        /* background: linear-gradient(#00000057, #9198e500); */
         backdrop-filter: blur(7px);
         -webkit-backdrop-filter: blur(7px);
 
@@ -105,6 +118,27 @@ hr {
 .hidden {
         display: none;
 }
+
+/* CSS Playground */
+
+.gradientBlackToBlue{
+    width: 100%;
+    height: 150%;
+    background: linear-gradient(#000000, #31338d);
+}
+
+.gradientBlackToBlueOpacity-50{
+    width: 100%;
+    height: 150%;
+    background: linear-gradient(#00000050, #31338d50);
+}
+
+.blurContainer{
+    
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+}
+
 
 /* If the screen size is 601px wide or more */
 @media screen and (min-width: 601px) {
