--- a/Style.css
+++ b/Style.css
@@ -31,17 +31,19 @@ nav a:active {
 }
 
 a {
-    color: #ebebeb;
+    /* color: #cec107; */
+    color: #1cc0da;
 }
 
 a:hover {
-    color: #ffffff;
-    /* color: #acacac; */
-    text-shadow: 0px 0px 15px #acacac;
+    /* color: #ecdd08; */
+    color: #1fe1ff;
 }
 
 a:active {
-    color: #d6d6d6;
+    /* color: #a59a07; */
+    color: #17A2B8;
+
 }
 
 .active {
@@ -121,22 +123,30 @@ hr {
 
 /* CSS Playground */
 
+canvas {
+        width: 100%;
+        height: 100%;
+}
 .gradientBlackToBlue{
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(#000000, #31338d);
+        background: linear-gradient(#000000, #31338d);
 }
 
 .gradientBlackToBlueOpacity-50{
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(#00000050, #31338d50);
+        background: linear-gradient(#00000050, #31338d50);
+}
+
+.gradientBlackToGold {
+        /* background: linear-gradient(#000000, #cec107); */
+        background: linear-gradient(#000000, #d4af37);
+}
+
+.gradientWhiteToGold {
+        background: linear-gradient(#ffffff, #d4af37);
 }
 
 .blurContainer{
-    
-    backdrop-filter: blur(7px);
-    -webkit-backdrop-filter: blur(7px);
+        backdrop-filter: blur(7px);
+        -webkit-backdrop-filter: blur(7px);
 }
 
 
