--- a/Style.css
+++ b/Style.css
@@ -81,7 +81,48 @@ a:active {
 
 }
 
+@keyframes rotate {
+        from {
+                transform: rotate(0deg);
+        }
+        to {
+                transform: rotate(360deg);
+        }
+}
 
+@keyframes skew {
+        from {
+                transform: skew(0deg);
+        }
+        to {
+                transform: skew(5deg);
+        }
+}
+
+.rotate {
+        animation-name: rotate;
+        animation-duration: 1s;
+        animation-iteration-count: 1;
+        animation-fill-mode: none;
+}
+
+.logo {
+        /* image-rendering: auto; */
+        /* image-rendering: crisp-edges; */
+        /* image-rendering: pixelated; */
+      
+        /* Safari seems to support, but seems deprecated and does the same thing as the others. */
+        /* image-rendering: -webkit-optimize-contrast; */
+
+        width:15%;
+        box-shadow: 0px 0px 50px 15px #17A2B8;
+
+        border: 7px solid #0e0e0e;
+        outline: 7px solid #0e0e0e50;
+        border-radius: 50% 50%;
+        
+
+}
 
 /* whole body except nav */
 .parentContainer {
@@ -90,6 +131,9 @@ a:active {
 }
 
 .navbar-brand {
+        color: #ebebeb;
+}
+.navbar-brand:hover {
         color: #ebebeb;
 }
 
@@ -253,6 +297,10 @@ canvas {
         .header {
                 /* font-size: 34px;   */
                 font-size: 150%;
+        }
+
+        .logo {
+                width:25%;
         }
 
 }
