Attempt to fix mobile issue - border radius

--- a/Style.css
+++ b/Style.css
@@ -119,9 +119,12 @@ a:active {
 
         border: 7px solid #0e0e0e;
         outline: 7px solid #0e0e0e50;
-        border-radius: 50% 50%;
-        -moz-outline-radius: 50% 50%;
-        
+        /* border-radius: 50% 50%; */
+        /* to fix mobile issue */
+        border-top-left-radius: 50%;
+        border-top-right-radius: 50%;
+        border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 50%;
 
 }
 
