--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,7 @@
 body {
         color: #ebebeb;
 
-        /* background-color: #3c3c3c; */
+        background-color: #1c1c1c;
         background-image: linear-gradient(#1c1c1c, #17A2B8);
         /* background-color: #3F5369; */
         /*background-image: url('Images/wallpaper.jpg');*/
