--- a/Style.css
+++ b/Style.css
@@ -45,7 +45,7 @@ nav a {
 nav a:hover {
         color: #ffffff;
         /* color: #acacac; */
-        text-shadow: 0px 0px 15px #acacac;
+        text-shadow: 0px 0px 15px #ffffff;
 }
 
 nav a:active {
@@ -54,7 +54,7 @@ nav a:active {
 
 .active {
         color: #ffffff;
-        text-shadow: 0px 0px 15px #acacac;
+        text-shadow: 0px 0px 15px #ffffff;
 }
 
 a {
