Added border radius of 1em to container class

--- a/Style.css
+++ b/Style.css
@@ -160,6 +160,11 @@ a:active {
 
 }
 
+/* whole body */
+.container {
+        border-radius: 1em;
+}
+
 /* whole body except nav */
 .parentContainer {
         font-size: 35px;
