Updated background removed image keeped color

--- a/Style.css
+++ b/Style.css
@@ -31,8 +31,10 @@ body {
         /*background-image: url('Images/wallpaper.jpg');*/
         /* background-image: url('Images/Image (15).png'); */
         /* background-image: repeating-linear-gradient(#1c1c1c 0pt, #173db8 500pt, #1c1c1c 1000pt); */
-        /* background-image: url('Images/seamless-abstract-black-floral-pattern.jpg'); */
-        background-image: url('https://freerangestock.com/sample/143731/abstract-hand-drawn-spirals-repeat-pattern-on-black-.jpg');
+        /* background-image: repeating-linear-gradient(#1c1c1c 0pt, #1cc0da 500pt, #1c1c1c 1000pt); */
+
+        /* background-image: url('Images/lines-void.jpg'); */
+        /* background-image: url('https://freerangestock.com/sample/143731/abstract-hand-drawn-spirals-repeat-pattern-on-black-.jpg'); */
         font-family: 'Teko';
         /* font-family: 'Roboto Mono', monospace; */
         /* font-weight: 600; */
